Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32683

Spider engine does not load with non-default alter-algorithm

    XMLWordPrintable

Details

    Description

      Spider does not load if the server is running with alter_algorithm=INSTANT (or NOCOPY, or INPLACE).

      It is true both when the server is started with a non-default alter-algorithm and plugin-load-add=ha_spider or when they are set/loaded at runtime.

      The failure started happening after these 2 commits in 10.10:

      First,

      commit c6ba81d6bf6b060853900d1ed7465bfa8553a0fe 
      Author:     Yuchen Pei <yuchen.pei@mariadb.com>
      CommitDate: Thu Oct 5 15:47:39 2023 +1100
       
          MDEV-27095 clean up spd_init_query.h
      

      caused the error in the error log

      ALGORITHM=INSTANT is not supported for this operation. Try ALGORITHM=COPY
      

      but the plugin would still load (at least on startup).
      Later after

      commit a60cf9c7ae4ae012443a6a91db4ee265fa6e4403
      Author:     Yuchen Pei <ycp@mariadb.com>
      CommitDate: Thu Oct 5 16:19:10 2023 +1100
       
          MDEV-22979 MDEV-27233 MDEV-28218 Fixing spider init bugs
      

      the error became more verbose

      [ERROR] SPIDER plugin initialization failed at 'alter table mysql.spider_tables  add column if not exists link_id int not null default 0 after table_name,  drop primary key,  add primary key (db_name, table_name, link_id);' by 'ALGORITHM=INSTANT is not supported for this operation. Try ALGORITHM=COPY'
      

      and the plugin stopped loading.

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.