MDEV-32683 Spider engine does not load with non-default alter-algorithm

specify algorithm/lock explicitly, don't depend on server settings